--- a/welcome.css
+++ b/welcome.css
@@ -223,6 +223,7 @@ li {
 #contact-info-post-page, #nav-bar-post-page {
     color:  rgba(255, 255, 255, 0.9);
 }
+
 /* ======================================== */
 
 @media screen and (max-width: 1080px) {
@@ -257,7 +258,7 @@ li {
     }
     #post-page-content {
         width: 100%;
-        height: 69rem;
+        height: 50rem;
     }
     #second-line img, #second-line v-divider {
         display: none;
@@ -284,6 +285,11 @@ li {
     }
     .btn::before {
         width: 97%;
+    }
+}
+@media screen and (max-width: 374px) {
+    #post-page-content {
+        height: 60rem;
     }
 }
 @media screen and (max-width: 241px) {
