--- a/about.css
+++ b/about.css
@@ -114,14 +114,12 @@ a {
     align-items: center;
     visibility: hidden;
     transform: scaleX(0);
+    background-color: rgba(255, 255, 255, 1);
+    transition: all .6s ease-in-out 0s;
 }
 .btn:hover::before {
     visibility: visible;
     transform: scaleX(1);
-}
-
-.btn:hover {
-    background-color: rgba(255, 255, 255, 0.9);
 }
 
 
@@ -136,7 +134,7 @@ a {
 
 #main-content-box {
     width: 40%;
-    height: 40%;
+    height: 45%;
     padding: 10px;
     background-color:  rgba(255, 255, 255, 0.4);
 }
@@ -174,6 +172,7 @@ img:hover {
 .divider {
     width: 100%;
     height: 2px;
+    background-color: rgba(0, 0, 0, 0.9);
 }
 
         /* =================== about me ============================ */
@@ -201,7 +200,7 @@ li {
 }
 /* ==== !!! === */
 
-#main-content-box, .btn:hover, #contact-info-about-page a {
+#main-content-box, #contact-info-about-page a {
     color:  rgba(0, 0, 0, 1);
 }
 
@@ -211,13 +210,6 @@ li {
     align-items: center;
 }
 
-.btn::before, .divider {
-    background-color: rgba(0, 0, 0, 0.9);
-}
-
-.btn::before, .btn:hover {
-    transition: all .6s ease-in-out 0s;
-}
 
 /* =========== */
 
