--- a/main.css
+++ b/main.css
@@ -64,11 +64,16 @@ body, html {
     font-family: 'Open Sans Condensed', sans-serif, 'PT Sans', sans-serif;
     background-image: linear-gradient(to bottom, rgba(0, 0, 110, 1), rgba(163, 56, 99, 1));
     color:  rgba(255, 255, 255, 0.9);
+    overflow: hidden;
 }
 
 h1 {
     font-family: 'Yusei Magic', sans-serif;
     padding: .2rem;
+    font-size: 1.5rem;
+}
+p {
+    text-align: justify;
 }
 
 /* ================================================================= Navigation bar ======================================================================== */
@@ -84,7 +89,6 @@ h1 {
     width: 8%;
     height: 100%;
     float: left;
-
 }
 
 .btn {
@@ -111,63 +115,77 @@ a {
     text-decoration: none;
     color: inherit;
 }
-/* ================================================= HOME PAGE ================================= */
-
-#home-page-content {
-    width: 100%;
-    height: 95%;
-    
-}
-
-#main-content-box-home-page {
+/* ======================== content ================================= */
+#content-box {
     width: 50%;
-    height: 50%;
-    padding: .625rem;
+    height: 40%;
+    top: 25%;
+}
+#main-content {
+    width: 80%;
+    height: 80%;
+    margin: 0 auto;
+}
+#main-content p {
+    width: 95%;
+    top: 10%;
+}
+#main-content h1 {
+    border-bottom: 2px solid white;
+}
+#hoping {
+    width: 100%;
+    height: 20%;
     text-align: center;
-    font-size: 3rem;
 }
+/* ==================== !!!!!!!!!!!!!================ */
 
-#main-content-box-home-page a {
-    text-decoration: underline;
-}
-
-
-/* ========== !!! ========== */
-#home-page-content, #main-content-box-home-page, .nav-bar-item {
+.nav-bar-item, #hoping {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-/* ========================== */
+#content-box, #main-content p {
+    margin: 0 auto; 
+    position: relative;
+}
+/* ============================================= */
 /* ========================== MEDIA ==================================== */
 
 @media screen and (max-width: 1080px) {
+    body {
+        font-size: 1rem;
+    }
     .nav-bar-item {
         width: 15%;
+        font-size: 1rem;
     }
     .btn::before {
         bottom: 15%;
     }
-    #main-content-box-home-page {
-        width: 100%;
-        font-size: 2rem;
+    h1 {
+        font-size: 1.3rem;
     }
 }
 @media screen and (max-width: 767px) {
     body {
-        font-size: .6rem;
+        font-size: .7rem;
     }
     .nav-bar-item {
         width: 20%;
+        font-size: .8rem;
     }
     .btn::before {
         bottom: 6%;
         width: 98%;
     }
-    #main-content-box-home-page {
+    #content-box {
         width: 100%;
-        height: 60%;
-        font-size: 1.3rem;
+        height: 50%;
+        top: 23%;
+    }
+    h1 {
+        font-size: 1rem;
     }
 }
 @media screen and (max-width: 241px) {
