--- a/posts.css
+++ b/posts.css
@@ -1,4 +1,3 @@
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -49,26 +48,38 @@ table {
     border-spacing: 0;
 }
 
-/* ================= end reset ======================= */
+/* ============================================================================= */
 
 body, html {
     min-width: 100%;
     width: 100%;
-    min-height: 100%;
+    min-height:  100%;
     height: 100%;
-    font-size: 1.2rem;
+    font-size: 1rem;
     letter-spacing: .1em;
     line-height: inherit;
+    color:  rgba(255, 255, 255, 0.9);
     font-family: 'Open Sans Condensed', sans-serif, 'PT Sans', sans-serif;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 110, 1), rgba(163, 56, 99, 1));
 }
+
 h1 {
-    font-family: 'Yusei Magic', sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
 }
+h2, .nav-bar-item {
+    font-size: 1.3rem;
+}
+h1, h2 {
+    font-family: 'Yusei Magic', sans-serif;
+}
+p::first-letter {
+    font-size: 1.3rem;
+    text-transform: uppercase;
+    font-style: bold;
+}
+/* ======================== navigation bar ===================================== */
 
-/* ============== navigation bar ============================= */
-
-#nav-bar-posts-page {
+#nav-bar-post-page {
     width: 100%;
     height: 5%;
 }
@@ -79,144 +90,65 @@ a {
 }
 
 .nav-bar-item {
-    width: 8%;
+    width: 10%;
     height: 100%;
     float: left;
 }
-
 .btn {
     position: relative;
 }
+
 .btn::before {
     content: "";
     position: absolute;
     width: 80%;
     height: 2px;
-    bottom: 15%;
+    bottom: 20%;
     align-items: center;
     visibility: hidden;
     transform: scaleX(0);
+    background-color: rgba(255, 255, 255, 0.9);
+    transition: all .6s ease-in-out 0s;
 }
 .btn:hover::before {
     visibility: visible;
     transform: scaleX(1);
 }
-.btn:hover {
-    background-color: rgba(255, 255, 255, 0.9);
-    color: rgba(0, 0, 0, 0.9);
-}
-.btn:hover, .btn::before {
-    transition: all .6s ease-in-out 0s;
-}
 
-/* ========================= content ===================== */
-
-#content-posts-page {
+/* ==================== content =============================== */
+#post-page-content {
     width: 100%;
-    height: 85%;
-}
-
-.h-divider {
-    width: 100%;
-    height: 1%;
-}
-
-#welcome {
-    width: 90%;
-    height: 30%;
-}
-
-.welcome-divider {
-    width: 100%;
-    height: 1%;
-}
-
-#welcome-heading {
-    width: 100%;
-    height: 9%;
-}
-
-#content-welcome {
-    width: 35%;
-    height: 90%;
-    background-image: radial-gradient( rgba(255, 255, 0, 0.9),  rgba(184, 130, 208, 0.9));
-    border-radius: 10% 0% 10% 0%;
-    overflow: hidden;
-}
-
-#content-welcome-empty-space {
-    width: 100%;
-    height: 50%;
-}
-
-#content-welcome-heading {
-    width: 100%;
-    height: 50%;
-    background-color:  rgba(255, 255, 255, 0.6); 
-}
-
-
-#welcome, #content-welcome {
-    margin: 0 auto;
-}
-
-#content-welcome-heading, .nav-bar-item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-/* ======================== contact info ====================== */
-
-#contact-info-posts-page {
-    width: 100%;
-    height: 10%;
+    height: 95%;
     text-align: center;
 }
-
-#contact-info-posts-page ul {
-    list-style-type: none;
+/* =============== !!!! ================ */
+.nav-bar-item, #post-page-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-#contact-info-posts-page ul li {
-    display: inline;
-}
+/* ======================================== */
 
-#contact-info-posts-page, #nav-bar-posts-page, .btn::before {
-    color: rgba(255, 255, 255, 0.9);
-}
-#contact-info-posts-page, #nav-bar-posts-page, .btn::before, .welcome-divider {
-    background-color: rgba(0, 0, 0, 0.9);
-}
-/* ================= Media ============================================ */
 @media screen and (max-width: 1080px) {
     body {
-        font-size: 1rem;
+        font-size: .9rem;
+    }
+    h1 {
+        font-size: 1.5rem;
     }
     .nav-bar-item {
+        font-size: 1.2rem;
         width: 15%;
-        font-size: 1.4rem;
-    }
-    .btn::before{
-        bottom: 10%; 
-    }
-    #content-welcome {
-        width: 50%;
     }
 }
 @media screen and (max-width: 767px) {
-    body {
-        font-size: .8rem;
-    }
     h1 {
-        font-size: 1rem;
+        font-size: 1.2rem;
     }
     .nav-bar-item {
-        width: 20%;
         font-size: .8rem;
-    }
-    #content-posts-page {
-        width: 100%;
+        width: 20%;
     }
     .btn::before {
         width: 97%;
@@ -224,16 +156,10 @@ a {
 }
 
 @media screen and (max-width: 241px) {
-    body {
-        font-size: .5rem;
-    }
-    .nav-bar-item {
-        font-size: .6rem;
-    }
     h1 {
         font-size: .7rem;
     }
-    .btn::before {
-        bottom: 0%;
+    .nav-bar-item {
+        font-size: .6rem;
     }
 }
