--- a/The-pandemic-and-my-personal-expirience.css
+++ b/The-pandemic-and-my-personal-expirience.css
@@ -118,7 +118,6 @@ a {
 #heading-space {
     width: 100%;
     height: 15%;
-    text-align: center;
 }
 picture {
     width: 100%;
@@ -141,7 +140,6 @@ picture {
 #contact-info-space {
     width: 100%;
     height: 5%;
-    text-align: center;
 }
 ul {
     list-style-type: none;
@@ -178,6 +176,9 @@ header {
 }
 #content-space, .paragraf {
     margin: 0 auto;
+}
+header, #contact-info-space, #heading-space {
+    text-align: center;
 }
 /* ======================================== */
 
