--- a/posts.css
+++ b/posts.css
@@ -70,47 +70,12 @@ h1 {
 
 /* ============== navigation bar ============================= */
 
-#nav-bar-posts-page {
-    width: 100%;
-    height: 5%;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-.nav-bar-item {
-    width: 8%;
-    height: 100%;
-    float: left;
-    font-size: 1rem;
-}
-
-.btn::before {
-    content: "";
-    position: absolute;
-    width: 80%;
-    height: 2px;
-    bottom: 15%;
-    background-color: rgba(255, 255, 255, 0.9);
-    align-items: center;
-    visibility: hidden;
-    transform: scaleX(0);
-}
-.btn:hover::before {
-    visibility: visible;
-    transform: scaleX(1);
-}
-.btn:hover, .btn::before {
-    transition: all .6s ease-in-out 0s;
-}
 
 /* ========================= content ===================== */
 
 #content-posts-page {
     width: 100%;
-    height: 85%;
+    height: 95%;
 }
 
 .h-divider {
@@ -122,6 +87,7 @@ a {
     width: 90%;
     height: 30%;
     text-align: center;
+    position: relative;
     top: 26%;
 }
 
@@ -137,7 +103,7 @@ a {
 
 #content-welcome {
     width: 35%;
-    height: 90%;
+    height: 95%;
     border-radius: 10% 0%;
     overflow: hidden;
 }
@@ -160,44 +126,20 @@ a {
     margin: 0 auto;
 }
 
-#content-welcome-heading, .nav-bar-item {
+#content-welcome-heading {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-/* ======================== contact info ====================== */
-
-#contact-info-posts-page {
-    width: 100%;
-    height: 10%;
-    text-align: center;
-}
-
-#contact-info-posts-page ul {
-    list-style-type: none;
-}
-
-#contact-info-posts-page ul li {
-    display: inline;
-}
 
 .welcome-divider, #content-welcome-heading {
     background-color: rgba(0, 0, 0, 0.9);
 }
-.btn, #welcome {
-    position: relative;
-}
 /* ================= Media ============================================ */
 @media screen and (max-width: 1080px) {
-    body, .nav-bar-item, h1 {
+    body, h1 {
         font-size: 1rem;
-    }
-    .nav-bar-item {
-        width: 15%;
-    }
-    .btn::before{
-        bottom: 10%; 
     }
     #content-welcome {
         width: 50%;
@@ -207,17 +149,14 @@ a {
     body {
         font-size: .7rem;
     }
-    h1, .nav-bar-item {
+    h1 {
         font-size: .5rem;
-    }
-    .nav-bar-item {
-        width: 15%;
     }
     #content-posts-page {
         width: 100%;
     }
-    .btn::before {
-        width: 97%;
+    #content-welcome {
+        width: 60%;
     }
 }
 
@@ -225,21 +164,13 @@ a {
     body {
         font-size: .5rem;
     }
-    .nav-bar-item {
-        font-size: .3rem;
-    }
     h1 {
         font-size: .4rem;
-    }
-    .btn::before {
-        bottom: 0%;
-    }
-    #content-welcome-empty-space img {
-        height: 90%;
     }
     #content-welcome-empty-space {
         display: flex;
         align-items: flex-end;
         justify-content: flex-end;
     }
+    
 }
