--- a/main.css
+++ b/main.css
@@ -49,10 +49,6 @@ table {
     border-spacing: 0;
 }
 
-
-/* ============================================================================================================================== */
-
-/* ===================== body + fonts and styles ============================= */
 body, html {
     min-width: 100%;
     width: 100%;
@@ -61,7 +57,7 @@ body, html {
     font-size: 1.2rem;
     letter-spacing: .1em;
     line-height: inherit;
-    font-family: 'Open Sans Condensed', sans-serif, 'PT Sans', sans-serif;
+    font-family: 'Open Sans Condensed', sans-serif;
     background-image: linear-gradient(to bottom, rgba(0, 0, 110, 1), rgba(163, 56, 99, 1));
     color:  rgba(255, 255, 255, 0.9);
     overflow: hidden;
@@ -76,7 +72,6 @@ p {
     text-align: justify;
 }
 
-/* ======================== content ================================= */
 #content-box {
     width: 50%;
     height: 40%;
@@ -85,7 +80,6 @@ p {
 #main-content {
     width: 80%;
     height: 80%;
-    margin: 0 auto;
 }
 #main-content p {
     width: 95%;
@@ -102,16 +96,13 @@ p {
     align-items: center;
     justify-content: center;
 }
-/* ==================== !!!!!!!!!!!!!================ */
 
-#content-box, #main-content p {
+#content-box, #main-content, #main-content p {
     margin: 0 auto;
 }
 .btn, #content-box, #main-content p {
     position: relative;
 }
-/* ============================================= */
-/* ========================== MEDIA ==================================== */
 
 @media screen and (max-width: 1080px) {
     body {
