--- a/nav-bar.css
+++ b/nav-bar.css
@@ -31,7 +31,6 @@
     visibility: hidden;
     transform: scaleX(0);
     background-color: rgba(0, 0, 0, 0.9);
-    transition: all .6s ease-in-out 0s;
 }
 .btn:hover::before {
     transform: scaleX(1);
@@ -42,17 +41,20 @@ a {
     color: inherit;
 }
 .nav-bar-item:hover, #bars-space:hover {
-    transition: all .6s ease-in-out 0s;
     background-color: rgba(255, 255, 255, 0.9);
     color: rgba(0, 0, 0, 0.9);
 }
 #s-media {
     height: 80%;
     width: 100%;
-    top: 64%;
+    top: 57%;
 }
 #second-icon {
     display: none;
+}
+
+.nav-bar-item:hover, #bars-space:hover, .btn::before {
+    transition: all .6s ease-in-out 0s;
 }
 
 .nav-bar-item, #bars-space {
@@ -67,7 +69,7 @@ a {
 
 @media screen and (max-width: 1080px) {
     .nav-bar-item {
-        font-size: .9rem;
+        font-size: .8rem;
     }
     .btn::before {
         bottom: 15%;
@@ -87,17 +89,15 @@ a {
 @media screen and (max-width: 360px) {
     .nav-bar-item {
         height: 8%;
+        font-size: .5rem;
     }
     #s-media {
         height: 84%;
-        top: 71%;
+        top: 64%;
     }    
 }
 
 @media screen and (max-width: 241px) {
-    .nav-bar-item {
-        font-size: .6rem;
-    }
     .btn::before {
         bottom: 2%;
     }
